--- a/package.json
+++ b/package.json
@@ -16,5 +16,21 @@
   "bugs": {
     "url": "https://github.com/acecera/Eat-In-React/issues"
   },
-  "homepage": "https://github.com/acecera/Eat-In-React#readme"
+  "homepage": "https://github.com/acecera/Eat-In-React#readme",
+  "dependencies": {
+    "axios": "^0.18.0",
+    "bcrypt": "^2.0.1",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.3",
+    "mongoose": "^5.1.1",
+    "mongoose-unique-validator": "^2.0.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
+    "webfontloader": "^1.6.28"
+  }
 }
