--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-jwt": "^5.3.1",
     "jwks-rsa": "^1.2.1",
     "mongoose": "^5.1.1",
     "mongoose-unique-validator": "^2.0.1",
